--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & npx next-video sync -w",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@smakss/react-scroll-direction": "^4.2.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.12.5",
     "next": "15.0.3",
+    "next-video": "^1.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "usehooks-ts": "^3.1.0"
