--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@nextui-org/accordion": "^2.2.5",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@smakss/react-scroll-direction": "^4.2.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "next-video": "^1.4.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
