--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.6",
+    "@sanity/icons": "^3.6.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.76.3",
     "@smakss/react-scroll-direction": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -23,10 +26,14 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
     "next": "15.0.3",
+    "next-sanity": "^9.8.59",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
+    "sanity": "^3.76.3",
+    "styled-components": "^6.1.15",
     "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.24.1"
